# confbk

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
doc/: confbk.1
src/: args.rs  main.rs  util.rs
tests/: integration.rs
tests/environments/: README.md
tests/environments/file_in_file_doesnt_exist_env/: listOfNonExistentConfig
tests/environments/list_env/: listOfConfigs1-2
