[package]
authors = ["Lorenzo Gurri <19lgurri@msjnet.net>"]
categories = ["command-line-utilities"]
description = "Backup files"
edition = "2018"
license = "MIT"
name = "confbk"
readme = "README.md"
repository = "https://github.com/recandi/confbk"
version = "0.1.0"

[dependencies]
clap = "~2.27.0"
chrono = "0.4.6"
rand = "0.6.0"

[dev-dependencies]
tempdir = "0.3"
assert_cmd = "0.10.2"
escargot = "0.3.1"
lazy_static = "1.2"
